# SUSTech-Deep-Learning-Project-Face-Recognition

./: .gitignore  CMakeLists.txt  LICENSE  create_new_face.py  readme.md  setup.sh
include/: config_utils.h  recognition_utils.h  video_utils.h
src/: create_new_face.cpp  main.cpp  utils.cpp
third_party_libs/: readme.md
